# Ball-Tracking-Turtle

./: README.md
ball_tracking_turtle/: .package.xml.swo  CMakeLists.txt  package.xml
ball_tracking_turtle/launch/: go_turtle.launch.py  moving_ball.launch.py
ball_tracking_turtle/resource/: moving_ball.avi
ball_tracking_turtle/scripts/: ball_animation.py  ball_pose.py  create_moving_ball.py  follow.py
